support for filenames and programpath with spaces
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@299 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/disk/help.html
+++ b/vmb/src/disk/help.html
@@ -94,7 +94,7 @@
 		<p>Tesing the status register, there are three typical values: negative means error, 1 meand bussy, 0 means idle.</p>
 		<h2>Configuration</h2>
 		
-		The Keyboard has the following configurable parameters:
+		The disk has the following configurable parameters:
 		<table>
 <tr> <td>host      <td> localhost <td>the host where the bus is located </tr>
 <tr> <td>port      <td> 9002 <td> the port where the bus is located</tr>
