--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -63,6 +63,7 @@ http://sourceforge.net/projects/vmb/</A>). The sources come with Makefiles. If y
 		<h2>Examples and Binaries</h2>
 		
 		
-		To avoid duplication of efforts, examples and binaries have moved to the <a href="html://mmix.cs.hm.edu">MMIX repository</a>.
+		To avoid duplication of efforts, examples and binaries have moved to the <a
+		href="http://mmix.cs.hm.edu">MMIX Homepage</a>.
 	</BODY>
 </HTML>
