added a linux version of the button device
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@302 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/button/help.html
+++ b/vmb/src/button/help.html
@@ -11,9 +11,9 @@
 		<h3><img src="button.gif" alt="" width="89" height="89" border="0"></h3>
 		<H2>Operation</H2>
 		
-		The program will contact the motherboard at [host:]port and register itself. Ther is no address associated with a button, just an interrupts.
+		The program will contact the motherboard at [host:]port and register itself. There is no address associated with a button, just an interrupts.
 		<p>In normal operation, when the button is pressed an interrupt is send to the motherboard. The button can be configured to send an interrupt also when the button is released.</p>
-		<p>The color of the button can beconfigured to be any 3 Byte RGB value (0xFF0000 is red, 0x00FF00 is green, and 0x0000FF is blue). Futher, a label can be specified to be placed on the button.</p>
+		<p>The color of the button can be configured to be any 3 Byte RGB value (0xFF0000 is red, 0x00FF00 is green, and 0x0000FF is blue). Further, a label can be specified to be placed on the button.</p>
 		<h2>Configuration</h2>
 		
 		The Keyboard has the following configurable parameters:
