restoring terminal settings on exit in keyboard. making button terminate properly.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@303 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/button/help.html
+++ b/vmb/src/button/help.html
@@ -7,7 +7,7 @@
 
 	<BODY>
 		<H1>Button Specification </H1>
-		<h3>available only under Win32</h3>
+		<h3>the GUI optins will work only under Win32</h3>
 		<h3><img src="button.gif" alt="" width="89" height="89" border="0"></h3>
 		<H2>Operation</H2>
 		
