adding the util subdirectory for build utilities
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@306 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -51,16 +51,19 @@ and links to ready to run binary examples.
 			<ul>
 				<li>Windows<br>
 					Currently, the simplest way to install the VMB devices is available for Windows users. <br>
-					Download the <strong><a href="setup.exe">setup.exe</a></strong> file, double click it, and you are done. <br>
+					Download the <strong><a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.1/setup_vmb_1_1.exe/download">setup file</a></strong>, double click it, and you are done. <br>
 					If all goes well, it will start a simple configuration: from the file readme.vmb: a screen, a keyboard, a MMIX  CPU, a ROM, and a ROM&nbsp;image. The keyboard will initialy take input from the file readme.txt. The CPU will take instructions from ROM, and these will take input from the keyboard and send it to the screen. So you should see the readme file.
+<p>
+To compile the executables yourself, you need to download the sources (see below) and use Visual Studio. The sources contain the necessary project and solution files.
 			</ul>
 		</div>
 		<ul>
 			<li>Linux<br>
-				Linux users have to compile the devices from sources obtained from cvs  (see: <A HREF="http://sourceforge.net/projects/vmb/">
-http://sourceforge.net/projects/vmb/</A>). The sources come with Makefiles. If you have make and gcc, just execute make in the top source directory.
+				Linux users have to compile the devices from sources.
+Either  obtained from cvs  (see: <strong><A HREF="http://sourceforge.net/projects/vmb/">
+http://sourceforge.net/projects/vmb/</A></strong>) or as a <strong><a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.1/source-1-1.tgz/download">tgz file</a></strong>. The sources come with Makefiles. If you have make and gcc, just execute make in the top source directory.
 		</ul>
-		<h2>Examples and Binaries</h2>
+		<h2>Examples</h2>
 		
 		
 		To avoid duplication of efforts, examples and binaries have moved to the <a
