--- a/vmb/src/mmix/help.html
+++ b/vmb/src/mmix/help.html
@@ -51,7 +51,7 @@
 			</tr>
 			<tr>
 				<td nowrap>SWYM XYZ</td>
-				<td>if $X,YZ is non zero, this instruction behaves like a software breakpoint, if $X points to a string the starts with &quot;DEBUG &quot;, the string is displayed.</td>
+				<td>if $X,YZ is non zero, this instruction behaves like a software breakpoint, if $X points to a string that starts with &quot;DEBUG &quot;, the string is displayed.</td>
 			</tr>
 		</table>
 		<h3>Miscellaneaous</h3>
