--- a/vmb/src/serial/help.html
+++ b/vmb/src/serial/help.html
@@ -69,7 +69,7 @@ Reading a CC byte equal to zero means there is no DD byte avalable.
 If the read interrupt is enabled, reading a zero CC value, 
 will cause generation of a read interrupt as soon as CC becomes non zero.
 If the application does not read CC, there will be no read interrupts.
-<p>
+<p>Especially when debugging such a serial device, it is often not possible to read data from the DD Byte fast enough. Then the CC count  will increase past 1 and data is lost. Setting the buffered  flag to true (on the commandline or under WIN32 in the Settings Dialog), the serial device will buffer incomming data internaly and stores the next byte from the input stream in the DD byte only after the previous byte was read from DD. In buffered mode, the CC Counter will always be 0 or at most 1.
 <H3>Output</H3>
 At offset 8, the serial device will provide a read/write octabyte
 in the following format:
@@ -110,7 +110,12 @@ The serial device has the following configurable parameters:
 <tr> <td>winterrupt <td> default <td>write interrupt send by device  </tr>
 <tr> <td>rdisable  <td> false <td> disable read interrupts </tr>
 <tr> <td>wdisable  <td> false <td> disable write interrupts  </tr>
-<tr> <td>serial    <td>       <td> connect to the given serial device </tr>
+			<tr>
+				<td>buffered</td>
+				<td>false</td>
+				<td>buffer input data until it is read from EIn</td>
+			</tr>
+			<tr> <td>serial    <td>       <td> connect to the given serial device </tr>
 <tr> <td> x        <td> 0<td>the x position of the window </tr>
 <tr> <td> y        <td> 0<td>the y position of the window </tr>
 <tr> <td> minimized<td> false<td>start with a minimized window </tr>
