addind the install target to Makefiles
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@314 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -23,6 +23,8 @@ and links to ready to run binary examples.
 		<H2> Device Documentation </H2>
 		<UL>
 <LI><a href="mother_help.html">mother</a> - the motherboard herself
+			<li><A HREF="serial_help.html">serial </A>- a simple serial
+communication device
 			<li><A HREF="winvram_help.html">winvram </A>- Framebuffer Device with Mouse and GPU
 
 			<LI><A HREF="timer_help.html">timer</A> - Timer Device to generate interrupts and get the current time and date.
@@ -51,7 +53,8 @@ and links to ready to run binary examples.
 			<ul>
 				<li>Windows<br>
 					Currently, the simplest way to install the VMB devices is available for Windows users. <br>
-					Download the <strong><a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.1/setup_vmb_1_1.exe/download">setup file</a></strong>, double click it, and you are done. <br>
+					Download the <strong>
+<a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.2/setup_vmb_1_2.exe/download">setup file</a></strong>, double click it, and you are done. <br>
 					If all goes well, it will start a simple configuration: from the file readme.vmb: a screen, a keyboard, a MMIX  CPU, a ROM, and a ROM&nbsp;image. The keyboard will initialy take input from the file readme.txt. The CPU will take instructions from ROM, and these will take input from the keyboard and send it to the screen. So you should see the readme file.
 <p>
 To compile the executables yourself, you need to download the sources (see below) and use Visual Studio. The sources contain the necessary project and solution files.
