--- a/vmb/htdocs/cache.html
+++ b/vmb/htdocs/cache.html
@@ -11,8 +11,8 @@ Access to RAM over the virtual bus can be slow compared to a builtin simulator.
 Therefore, as with real hardware, we use caches to reduce the overhead of the bus.
 <p>
 In the moment we assume having one CPU only, that is, one process that
-reads and writes the cache. To make the cache as fast as possible, especialy
-on systems with several (real) CPUs, other threads - collectively called service threeads -
+reads and writes the cache. To make the cache as fast as possible, especially
+on systems with several (real) CPUs, other threads - collectively called service threads -
 will take care of the interfacing the cache with the virtual bus.
 As a general rule, access to the resources should have no, or very little overhead,
 in the (normal) case where we do not need the virtual bus.
@@ -23,27 +23,27 @@ and reset, and registration.
 
 <H3> Interrupts</H3>
 
-This is a simple case, but illustartes the problem. A typical CPU will
+This is a simple case, but illustrates the problem. A typical CPU will
 check for interrupts once per cycle. If the CPU thread checks for input on the
 virtual bus that can be very time consuming. Here is the solution:
 We have 64-Bit interrupt vector. The CPU Thread is allowed reading it at any
 time. If it is 0, there is no interrupt and the CPU thread can continue. This is the
-normal, fast case. If the bitwvector is not zero, an interupt has occured
-and things become differen. In this case, the CPU can lock the bit-vector,
+normal, fast case. If the bitvector is not zero, an interrupt has occurred
+and things become different. In this case, the CPU can lock the bit-vector,
 copy bits into private variables (typically with an or operation) and reset
 the bit-vector to zero.
 If an interrupt arrives, the service thread will also lock the bitvector and add a bit to it.
 Locking ensures, that write operations on the bit-vector are atomic. The read operation
 is not atomic. The CPU gets a snapshot of the bit vector. This is, however, not
 a problem. It will see the complete changes, either when locking it or if the
-bit-vector is stille zero, on the next cycle.
+bit-vector is still zero, on the next cycle.
 
 <H3> Reset, Power-on, and Power-off</H3>
 
 Power is for the CPU thread a read only variable. There is no synchronization
-needed. The CPU might miss short powerfails, if it isnt checking fast enough.
+needed. The CPU might miss short power-fails, if it isn't checking fast enough.
 <p>
-Reset nedds a kind of aknowledge. Reading the reset variable again needs
+Reset needs a kind of acknowledge. Reading the reset variable again needs
 no synchronisation. Resetting it to zero needs locking.
 
 <H3>Startup and Shutdown</H3>
@@ -102,7 +102,7 @@ the reuse.
 <H4>Locking, Waiting and Threads</H4>
 
 The main part of the line is the data_address pair, which contains beside
-data and address also status and size. The size is non negativ can be less or equal to LINESIZE
+data and address also status and size. The size is non negative can be less or equal to LINESIZE
 The status can be Valid, Invalid, Reading, or Writing.
 A line that is invalid is as good as non existing. Only the CPU thread can
 change a line from Invalid to something else. No locking is required.
@@ -122,19 +122,19 @@ to the bus-read thread. When the answer for the read request arrives, the bus-re
 check the pending lines, find the line and store the data received. It will then set the
 status back to Valid and signals the CPU thread.
 Note that only the CPU thread will ever set the address for a line. So what if an answer
-arrives and ther is no pending line for it? This should not happen in the first place
-since requests are mage only for lines that are pending.
+arrives and there is no pending line for it? This should not happen in the first place
+since requests are made only for lines that are pending.
 If it happens anyway, the answer is ignored.
 <p>
 It might very well happen that a line becomes valid but the CPU is not waiting for a signal.
-Fo instance there might be an instruction prefetch that causes a read operation on the
+For instance there might be an instruction prefetch that causes a read operation on the
 instruction cache. The CPU will issue the read but will not wait for it to complete. 
 Then the execution may take a different route and the data will never be needed. Or the
 execution proceeds as predicted. In this case we will read the instruction, and it might be
 in the cache as valid or as reading. In the later case the thread starts waiting for it
 until the read completes.
 <p>
-By launching serveral read or write requests it can happen that the CPU thread can not
+By launching several read or write requests it can happen that the CPU thread can not
 find an INVALID or VALID line for the next request. In this case, it will have to wait
 until the first line in the set becomes valid. 
 
