--- a/vmb/src/winvram/help.html
+++ b/vmb/src/winvram/help.html
@@ -52,14 +52,14 @@ The GPU uses 56 Byte as follows:
 <p>
 <table border=1>
 <tr><th>Index<th>Name<th>Description
-<tr><td>0x00<td>command<td> see below.
+<tr><td>0x00<td>command/status<td> see below.
 <tr><td>0x01-0x03<td>command aux<td> see below.
-<tr><td>0x04-0x05<td>x2<td> secondary x position
-<tr><td>0x06-0x07<td>y2<td> secondary y position
+<tr><td>0x04-0x05<td>x<td> new x position
+<tr><td>0x06-0x07<td>y<td> new y position
 <tr><td>0x08-0x09<td>w<td> width 
 <tr><td>0x0a-0x0b<td>h<td> height
-<tr><td>0x0c-0x0d<td>x<td> x position
-<tr><td>0x0e-0x0f<td>y<td> y position
+<tr><td>0x0c-0x0d<td>cur_x<td> current x position
+<tr><td>0x0e-0x0f<td>cur_y<td> current y position
 <tr><td>0x10-0x17<td>bba<td> bit block address
 <tr><td>0x18     <td> - <td> ignored
 <tr><td>0x19     <td>tbr<td>  text background color red
@@ -78,7 +78,7 @@ The GPU uses 56 Byte as follows:
 <tr><td>0x26     <td>lg<td>  line color green
 <tr><td>0x27     <td>lb<td>  line color blue
 <tr><td>0x28-0x29<td>cw<td> character width 
-<tr><td>0x2a-0x2b<td>ch<td> charcter height
+<tr><td>0x2a-0x2b<td>ch<td> character height
 <tr><td>0x2c-0x2f<td> - <td> unused
 <tr><td>0x30-0x31<td>fw<td> frame width
 <tr><td>0x32-0x33<td>fh<td> frame height
@@ -86,49 +86,70 @@ The GPU uses 56 Byte as follows:
 <tr><td>0x36-0x37<td>sh<td> screen height
 </table>
 <p>
-The first 4 Byte (0-4) contain the command. writing any of these
+The first 4 Byte (0-4) contain the command. Writing any of these
 bytes will trigger the execution of the command.
 The command may be split into a command number (byte 0) and some
 auxiliary information (1-3).
+The command number (byte 0) also serves as status byte. 
+The most significant bit is an error indicator. Therefore reading a
+negativ status byte, indicates that an error has occured during the last operation.
+Reading the status byte will reset the error indicator. So reading
+the status byte twice will return a nonnegative value the second time
+(unless a new error has occured between the first and the second read).
+A zero status byte indicates that the GPU is idle and ready to receive
+new commands. A positive status byte indicates that the GPU is 
+bussy. The values are device dependent.
+While the GPU is bussy, the effect of writing to the command byte is
+unspecified. You can, however, write to (or read from) all the other GPU registers.
+The values in the other registers will be used only when a GPU command
+starts executing.
 <p>
-Most commands require a position. The coordinates are taken
-from Bytes c,d (x) and e,f (y).  If appropriate, executing a command
-will update these values to make the two values work like a cursor.
+Most commands require a position. The coordinates are either taken
+from Bytes 4,5 (x) and 6,7 (y) or 
+from Bytes c,d (cur_x) and e,f (cur_y) (the current position).  
+If appropriate,  executing a command will update the values cur_x and cur_y 
+to make the current position work like a cursor.
 <p>
 Bit Block transfers from/to non graphic memory need a physical
-target address. The address goes in the third OCTA.
+target address. The address goes in the third OCTA, the bit block address (bba).
 <p>
-Most commands require, in addition, color information (Drawing of Text,
+Some commands require, in addition, color information (Drawing of Text,
 Lines and Rectangles) this information comes in the fourth and fifth OCTA.
 <p>
-Commands that need additional x,y information would primarily use byte 4 to 7.
-Additional x,y and w,h information can be provided in the second OCTA.
+Commands that need new x, y information would primarily use byte 4 to 7.
+Alternatively the current x,y can be used. Width and height information 
+can be provided in bytes 8, 9 (w) and 0xa, 0xb (w).
 <p>
 The sixth and seventh OCTA are read only. They provide information
 on the size of the system font, the frame size and the visible part of it.
 <p>
 <H3>Commands</H3>
 <H4> command == 0 Do Nothing</H4>
+
 <H4> command == 1 Write Character</H4>
-write the character contained in command aux LO (ASCII) to the position
-given in x and y using the system Font. update x and y for the next character.
-Handle newline (0x0A) by moving x,y to the beginning of the next line and 
-carriage return (0x0D) by moving x,y to the beginning of the current line.
+Write the character contained in the low byte of command aux (ASCII) to the current position
+given in cur_x and cur_y using the system font. Update cur_x and cur_y for the next character.
+Handle newline (0x0A) by moving cur_x, cur_y to the beginning of the next line and 
+carriage return (0x0D) by moving cur_x, cur_y to the beginning of the current line.
 Scroll up the screen, if a newline happens to be in the last line of the screen.
+
 <H4> command == 2 Draw Rectangle</H4>
-Draw a filled Rectangle using the fill color, using the x,y position as top left
-and the secondary x,y as bottom right. No update of the position occurs.
+Draw a filled Rectangle using the fill color, using the x, y position as top left
+and w,h as the size of the rectangle. No update of the position occurs.
+
 <H4> command == 3 Draw Line</H4>
-Draw a line using the current line color from the x,y position to the secondary x,y.
-The secondary x,y will then replace the position x,y to support drawing joint lines.
+Draw a line, using the current line color, 
+from the cur_x, cur_y position to the new x, y position.
+The new x, y will then replace the current position cur_x, cur_y to support drawing joint lines.
 If command aux is zero, the default line width is used (usually 1 pixel). If command aux
 is not zero, it will be used as the line width in pixel.
+
 <H4> command == 4 Bit Block Transfer</H4>
 Transfers a rectangular block of pixels from one part of the video ram to another part
-of the video ram. The x,y position is the top left coordinate of 
-the destination. the secondary x,y is the top left coordinate of the source. 
-the width and height values of the second OCTA define the destination rectangle.
-clipping (if needed) occurs on the destination rectangle.
+of the video ram.  The new position x,y is the top left coordinate of the source. 
+The current position cur_x, cur_y is the top left coordinate of 
+the destination; the width and height values w, h define the size of the destination rectangle.
+Clipping (if needed) occurs on the destination rectangle.
 The command aux value is used for the raster mode used in a
 windows Bitblt Function. the following values are defined:
 <p>
@@ -151,27 +172,32 @@ windows Bitblt Function. the following values are defined:
 <tr><td> WHITENESS    <td>       0xFF0062  <td>dest = WHITE     
 </table>
 
-<H4> command == 5 Incomming Bit Block Transfer</H4> 
+<H4> command == 5 Incoming Bit Block Transfer</H4> 
 Transfers a rectangular block of pixels from regular memory into the video memory.
-The x,y position is the top left coordinate of 
-the destination. The bit block address (bba) ist the physical adress where
+The bit block address (bba) is the physical address where
 the source bit pattern is stored as a sequence of TETRA byte.
-The width and height values of the second OCTA define the source and the destination rectangle.
-clipping (if needed) occurs on the destination rectangle.
-The command aux value should be used for the raster mode ar specified above,
-however this is currently not implemented. The values are just copied from source to destination.
+The current position cur_x, cur_y is the top left coordinate of 
+the destination; the width and height values (w, h) define the size 
+of source and destination rectangle.
+Clipping (if needed) occurs on the destination rectangle.
+The command aux value should be used for the raster mode as specified above,
+(however this is currently not implemented). 
+The values are just copied from source to destination.
 <p>
 The GPU will raise an interrupt when the data transfer has completed.
 <p>
 
 <H4> command == 6 Outgoing Bit Block Transfer</H4> 
 Transfers a rectangular block of pixels from the video memory into regular memory.
-The x,y position is the top left coordinate of 
-the source. The bit block address (bba) ist the destination physical adress where
+The current position cur_x, cur_y is the top left coordinate of 
+the source. The width and height values (w, h) define the size of the 
+source and destination rectangle.
+The bit block address (bba) is the physical address of the  destination where
 the bit pattern is stored as a sequence of TETRA byte.
-The width and height values of the second OCTA define the source (and the destination) rectangle.
-The command aux value should be used for the raster mode ar specified above,
-however this is currently not implemented. The values are just copied from source to destination.
+
+The command aux value should be used for the raster mode as specified above,
+however, this is currently not implemented. 
+The values are just copied from source to destination.
 <p>
 The GPU will raise an interrupt when the data transfer has completed.
 <p>
@@ -202,9 +228,7 @@ The win32 vram device has the following configurable parameters:
 <tr> <td> config   <td> not set<td>filename for a configuration file</tr>
 <tr> <td> help     <td> false<td>to print information</tr>
 </table>
-These values should be set in default.mmc
-
-
+These values can be set in the .vmb file.
 
 </BODY>
 </HTML>
