adding msp subdirectory
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@334 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/winvram/help.html
+++ b/vmb/src/winvram/help.html
@@ -2,6 +2,8 @@
 <BODY>
 <H1>winvram Device Specification</H1>
 
+<img src="winvram.gif" alt="" width="422" height="334" border="0">
+
 
 <H2>The Video Ram</H2>
 The video ram uses 4 Byte (one TETRA) for each pixel: II RR GG BB
