--- a/vmb/src/mother/help.html
+++ b/vmb/src/mother/help.html
@@ -82,6 +82,7 @@
 <tr> <td> debugmask <td> 0xFFF0 <td>set mask to hide debug output </tr>
 <tr> <td> verbose  <td> false<td>make debugging verbose, sets debug mask to zero </tr>
 <tr> <td> define   <td> not set<td>to define a name for conditionals</tr>
+<tr> <td> terminate<td> not set<td>terminate the motherboard after starting devices (use for remote devices)</tr>
 <tr> <td> config   <td> not set<td>filename for a configuration file</tr>
 <tr> <td> help     <td> false<td>to print information</tr>
 			<tr>
