--- a/vmb/htdocs/messages.html
+++ b/vmb/htdocs/messages.html
@@ -305,9 +305,9 @@ Message Format: 20 to 24 Byte
    The receiver can use the data.
 
 
-<HR><H3><Pre>#define ID_REGISTER   0xFA0</pre></H3>
+<HR><H3><Pre>#define ID_REGISTER   0xFA</pre></H3>
 
-Message Format: 4 to 8 Byte
+Message Format: 36 to 12+8*256 Byte
 <table border=1>
 <tr><td>    TYPE<td>(bus=1, time=any, address=0, route=0, 
             payload=1, request=0, lock=any, unused=any)
@@ -320,12 +320,16 @@ Message Format: 4 to 8 Byte
 </table>
 
 <H4>Semantics:</H4>
-   The sender of this message tries to register itself with the bus.
+   The sender of this message tries to register itself with the bus.<br>
    The payload will contain in this order:
-     the address (8 byte)
-     the limit (8 byte)
-     the interrupt mask (8byte)
-     the name (a multiple of 8 byte)
+   <ul>
+    <li> the address (8 byte)
+    <li> the limit (8 byte)
+    <li> the interrupt mask (8byte)
+    <li> the name (a multiple of 8 byte)
+	<li> optional: the version number (4 byte major, 4 byte minor)
+	<li> optional: further information yet unspecified.
+   </ul>
    The SIZE byte should correctly specify the amount of payload supplied
    which varies because of the name.
    The registered device claims to be responsible for the memory
@@ -337,7 +341,13 @@ Message Format: 4 to 8 Byte
    left justified in the payload. The payload may be longer than the string
    because the payload is always a multiple of 8 byte. The name of the
    device is just for information. 
-
+   The next 8 byte, if they exist, contain the version number of the device.
+   <p>
+   Currently, a device can register only once. It is planed to change this so
+   that a device can register and unregister for multiple memory ranges, possibly
+   occupying multiple slots, but using only a single TCP/IP connection.
+   
+   
 <HR><H3><Pre>#define ID_UNREGISTER 0xFB</pre></H3>
 
 Message Format: 4 to 8 Byte
